Add subscription_id and created_on to Subscription endpoints
