# openapi/spec.yaml
@@ -219,8 +219,10 @@ components:
     Subscription:
       required:
         - id
+        - subscription_id
         - account_id
         - state
+        - created_on
       properties:
         id:
           type: string
@@ -230,6 +232,12 @@ components:
           format: uuid
         state:
           type: string
+        subscription_id:
+          type: string
+          format: uuid
+        created_on:
+          type: integer
+          format: int64
     UsageReports:
       required:
         - id
